src/objects/FSTR__Process_Instance__c.object
<CustomObject>
    <fields>
        <fullName>FSTR__AlreadyGenerated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Already Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval</label>
        <referenceTo>FSTR__PCE_Approval__c</referenceTo>
        <relationshipLabel>Process Instance</relationshipLabel>
        <relationshipName>Process_Instance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Auto_Close__c</fullName>
        <label>Auto Close</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Business_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Process Instance</relationshipLabel>
        <relationshipName>Process_Instance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Business_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Process</label>
        <referenceTo>FSTR__Business_Process__c</referenceTo>
        <relationshipLabel>Process Instances</relationshipLabel>
        <relationshipName>Process_Instances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist</label>
        <referenceTo>FSTR__PCE_Checklist__c</referenceTo>
        <relationshipLabel>Process Instance</relationshipLabel>
        <relationshipName>Process_Instance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Client_Id__c</fullName>
        <externalId>true</externalId>
        <label>Client Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Process Instance</relationshipLabel>
        <relationshipName>Process_Instance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Process Instance</relationshipLabel>
        <relationshipName>Process_Instance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Completion_Time_Days__c</fullName>
        <formula>if(Not(isblank(FSTR__Completed_Date__c)), FSTR__Completed_Date__c - CreatedDate, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completion Time (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Definition</label>
        <referenceTo>FSTR__PCE_Definition__c</referenceTo>
        <relationshipLabel>Process Instance</relationshipLabel>
        <relationshipName>Process_Instance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Details__c</fullName>
        <inlineHelpText>Acts as the description field for Process Instances</inlineHelpText>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSTR__IsAutomated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Automated Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Loopback_Count__c</fullName>
        <label>Loopback Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__Object_Id__c</fullName>
        <description>Holds the object Id regardless of type or its own Id</description>
        <externalId>true</externalId>
        <label>Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Owner_Id__c</fullName>
        <description>Holds the owner Id regardless of User Id or Queue Id</description>
        <externalId>true</externalId>
        <label>Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Parent_Event_Id__c</fullName>
        <externalId>true</externalId>
        <label>Parent Event Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Parent_Stage_Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Stage Instance</label>
        <referenceTo>FSTR__Stage_Instance__c</referenceTo>
        <relationshipLabel>Process Instances (Parent Stage Instance)</relationshipLabel>
        <relationshipName>Child_Process_Instances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Parent_Step_Process_Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Step Process Instance</label>
        <referenceTo>FSTR__Process_Instance__c</referenceTo>
        <relationshipLabel>Process Instances</relationshipLabel>
        <relationshipName>Child_Process_Instances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Previous_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Definition</label>
        <referenceTo>FSTR__PCE_Definition__c</referenceTo>
        <relationshipLabel>Process Instances</relationshipLabel>
        <relationshipName>Process_Instances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Group</label>
        <referenceTo>FSTR__Process_Group__c</referenceTo>
        <relationshipLabel>Process Instance</relationshipLabel>
        <relationshipName>Process_Instance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Initiated__c</fullName>
        <label>Process Initiated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Instance</label>
        <referenceTo>FSTR__Process_Instance__c</referenceTo>
        <relationshipLabel>Process Instances</relationshipLabel>
        <relationshipName>Process_Instances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Object_Id__c</fullName>
        <description>Holds the process object id regardless of type</description>
        <externalId>true</externalId>
        <label>Process Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Recurring_Business_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Business Process</label>
        <referenceTo>FSTR__Recurring_Business_Process__c</referenceTo>
        <relationshipLabel>Process Instance</relationshipLabel>
        <relationshipName>Process_Instance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Skipped_Steps__c</fullName>
        <description>Stores the steps in a stage that were not created (in JSON).  This field is used to determine whether to create child steps (by checking for skipped steps that are set to &apos;ignore in stage completion&apos;) or to proceed with the completion of a stage even if not all steps in that stage are completed.</description>
        <label>Skipped Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Stage_Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stage Instance</label>
        <referenceTo>FSTR__Stage_Instance__c</referenceTo>
        <relationshipLabel>Process Instances</relationshipLabel>
        <relationshipName>Process_Instances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Step_Stage_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stage</label>
        <referenceTo>FSTR__PCE_Stage__c</referenceTo>
        <relationshipLabel>Process Instances</relationshipLabel>
        <relationshipName>Process_Instances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Step</label>
        <referenceTo>FSTR__PCE_Step__c</referenceTo>
        <relationshipLabel>Process Instance</relationshipLabel>
        <relationshipName>Process_Instance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Subject__c</fullName>
        <label>Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Process Instance</label>
    <listViews>
        <fullName>FSTR__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Process Instance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>